Design/output/WhileLanguageParser.java
// $ANTLR 3.4 /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g 2011-12-14 12:23:11

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class WhileLanguageParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOL_LITERAL", "COMMENT", "IDENT", "INT_LITERAL", "WS", "'!'", "'!='", "'%'", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'assert'", "'assume'", "'bool'", "'else'", "'ensure'", "'if'", "'int'", "'invariant'", "'main'", "'return'", "'while'", "'{'", "'|'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int BOOL_LITERAL=4;
    public static final int COMMENT=5;
    public static final int IDENT=6;
    public static final int INT_LITERAL=7;
    public static final int WS=8;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "literal_expression", "add_expression", "variable_declaration", 
    "array_declaration", "while_statement", "expression", "assignment", 
    "parenthesized_expression", "mul_expression", "parameter_list", "unary_expression", 
    "method_call", "type", "assert_statement", "method_body", "invariant_statement", 
    "rel_expression", "ensure_statement", "if_statement", "assume_statement", 
    "parameter", "statement_block", "program", "main_method", "loop_body", 
    "arglist", "method_declaration", "array_access", "statement"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public WhileLanguageParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public WhileLanguageParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public WhileLanguageParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return WhileLanguageParser.tokenNames; }
    public String getGrammarFileName() { return "/home/stud/s_bischo/PSE2011/Design/WhileLanguage.g"; }



    // $ANTLR start "program"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:3:1: program : ( assume_statement )* ( method_declaration )* main_method ;
    public final void program() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "program");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(3, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:4:2: ( ( assume_statement )* ( method_declaration )* main_method )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:4:4: ( assume_statement )* ( method_declaration )* main_method
            {
            dbg.location(4,4);
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:4:4: ( assume_statement )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==30) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:4:4: assume_statement
            	    {
            	    dbg.location(4,4);
            	    pushFollow(FOLLOW_assume_statement_in_program11);
            	    assume_statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(4,22);
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:4:22: ( method_declaration )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==31||LA2_0==35) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:4:22: method_declaration
            	    {
            	    dbg.location(4,22);
            	    pushFollow(FOLLOW_method_declaration_in_program14);
            	    method_declaration();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(4,42);
            pushFollow(FOLLOW_main_method_in_program17);
            main_method();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(5, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "program");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "method_declaration"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:7:1: method_declaration : type IDENT '(' ( parameter_list )? ')' method_body ;
    public final void method_declaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "method_declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(7, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:8:2: ( type IDENT '(' ( parameter_list )? ')' method_body )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:8:4: type IDENT '(' ( parameter_list )? ')' method_body
            {
            dbg.location(8,4);
            pushFollow(FOLLOW_type_in_method_declaration29);
            type();

            state._fsp--;

            dbg.location(8,9);
            match(input,IDENT,FOLLOW_IDENT_in_method_declaration31); 
            dbg.location(8,15);
            match(input,13,FOLLOW_13_in_method_declaration33); 
            dbg.location(8,19);
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:8:19: ( parameter_list )?
            int alt3=2;
            try { dbg.enterSubRule(3);
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==31||LA3_0==35) ) {
                alt3=1;
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:8:19: parameter_list
                    {
                    dbg.location(8,19);
                    pushFollow(FOLLOW_parameter_list_in_method_declaration35);
                    parameter_list();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(3);}

            dbg.location(8,35);
            match(input,14,FOLLOW_14_in_method_declaration38); 
            dbg.location(8,39);
            pushFollow(FOLLOW_method_body_in_method_declaration40);
            method_body();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(9, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "method_declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "method_declaration"



    // $ANTLR start "main_method"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:11:1: main_method : 'main' '(' ( parameter_list )? ')' method_body ;
    public final void main_method() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "main_method");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(11, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:12:2: ( 'main' '(' ( parameter_list )? ')' method_body )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:12:4: 'main' '(' ( parameter_list )? ')' method_body
            {
            dbg.location(12,4);
            match(input,37,FOLLOW_37_in_main_method51); 
            dbg.location(12,11);
            match(input,13,FOLLOW_13_in_main_method53); 
            dbg.location(12,15);
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:12:15: ( parameter_list )?
            int alt4=2;
            try { dbg.enterSubRule(4);
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            int LA4_0 = input.LA(1);

            if ( (LA4_0==31||LA4_0==35) ) {
                alt4=1;
            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:12:15: parameter_list
                    {
                    dbg.location(12,15);
                    pushFollow(FOLLOW_parameter_list_in_main_method55);
                    parameter_list();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(4);}

            dbg.location(12,31);
            match(input,14,FOLLOW_14_in_main_method58); 
            dbg.location(12,35);
            pushFollow(FOLLOW_method_body_in_main_method60);
            method_body();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(13, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "main_method");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "main_method"



    // $ANTLR start "parameter_list"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:15:1: parameter_list : parameter ( ',' parameter )* ;
    public final void parameter_list() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "parameter_list");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(15, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:16:2: ( parameter ( ',' parameter )* )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:16:4: parameter ( ',' parameter )*
            {
            dbg.location(16,4);
            pushFollow(FOLLOW_parameter_in_parameter_list72);
            parameter();

            state._fsp--;

            dbg.location(16,14);
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:16:14: ( ',' parameter )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                int LA5_0 = input.LA(1);

                if ( (LA5_0==17) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:16:16: ',' parameter
            	    {
            	    dbg.location(16,16);
            	    match(input,17,FOLLOW_17_in_parameter_list76); 
            	    dbg.location(16,20);
            	    pushFollow(FOLLOW_parameter_in_parameter_list78);
            	    parameter();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(17, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "parameter_list");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "parameter_list"



    // $ANTLR start "parameter"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:19:1: parameter : type IDENT ;
    public final void parameter() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "parameter");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(19, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:20:2: ( type IDENT )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:20:4: type IDENT
            {
            dbg.location(20,4);
            pushFollow(FOLLOW_type_in_parameter94);
            type();

            state._fsp--;

            dbg.location(20,9);
            match(input,IDENT,FOLLOW_IDENT_in_parameter96); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(21, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "parameter");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "parameter"



    // $ANTLR start "method_body"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:23:1: method_body : '{' ( assume_statement )* ( statement )* ( ensure_statement )* '}' ;
    public final void method_body() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "method_body");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(23, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:24:2: ( '{' ( assume_statement )* ( statement )* ( ensure_statement )* '}' )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:24:4: '{' ( assume_statement )* ( statement )* ( ensure_statement )* '}'
            {
            dbg.location(24,4);
            match(input,40,FOLLOW_40_in_method_body109); 
            dbg.location(24,8);
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:24:8: ( assume_statement )*
            try { dbg.enterSubRule(6);

            loop6:
            do {
                int alt6=2;
                try { dbg.enterDecision(6, decisionCanBacktrack[6]);

                int LA6_0 = input.LA(1);

                if ( (LA6_0==30) ) {
                    alt6=1;
                }


                } finally {dbg.exitDecision(6);}

                switch (alt6) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:24:8: assume_statement
            	    {
            	    dbg.location(24,8);
            	    pushFollow(FOLLOW_assume_statement_in_method_body111);
            	    assume_statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);
            } finally {dbg.exitSubRule(6);}

            dbg.location(24,26);
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:24:26: ( statement )*
            try { dbg.enterSubRule(7);

            loop7:
            do {
                int alt7=2;
                try { dbg.enterDecision(7, decisionCanBacktrack[7]);

                int LA7_0 = input.LA(1);

                if ( (LA7_0==IDENT||LA7_0==29||LA7_0==31||(LA7_0 >= 34 && LA7_0 <= 35)||(LA7_0 >= 38 && LA7_0 <= 39)) ) {
                    alt7=1;
                }


                } finally {dbg.exitDecision(7);}

                switch (alt7) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:24:26: statement
            	    {
            	    dbg.location(24,26);
            	    pushFollow(FOLLOW_statement_in_method_body114);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);
            } finally {dbg.exitSubRule(7);}

            dbg.location(24,37);
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:24:37: ( ensure_statement )*
            try { dbg.enterSubRule(8);

            loop8:
            do {
                int alt8=2;
                try { dbg.enterDecision(8, decisionCanBacktrack[8]);

                int LA8_0 = input.LA(1);

                if ( (LA8_0==33) ) {
                    alt8=1;
                }


                } finally {dbg.exitDecision(8);}

                switch (alt8) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:24:37: ensure_statement
            	    {
            	    dbg.location(24,37);
            	    pushFollow(FOLLOW_ensure_statement_in_method_body117);
            	    ensure_statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);
            } finally {dbg.exitSubRule(8);}

            dbg.location(24,55);
            match(input,42,FOLLOW_42_in_method_body120); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(25, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "method_body");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "method_body"



    // $ANTLR start "statement"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:27:1: statement : ( assert_statement | variable_declaration | array_declaration | assignment | if_statement | while_statement | 'return' expression ';' );
    public final void statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(27, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:28:2: ( assert_statement | variable_declaration | array_declaration | assignment | if_statement | while_statement | 'return' expression ';' )
            int alt9=7;
            try { dbg.enterDecision(9, decisionCanBacktrack[9]);

            try {
                isCyclicDecision = true;
                alt9 = dfa9.predict(input);
            }
            catch (NoViableAltException nvae) {
                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:28:4: assert_statement
                    {
                    dbg.location(28,4);
                    pushFollow(FOLLOW_assert_statement_in_statement133);
                    assert_statement();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:29:4: variable_declaration
                    {
                    dbg.location(29,4);
                    pushFollow(FOLLOW_variable_declaration_in_statement138);
                    variable_declaration();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:30:4: array_declaration
                    {
                    dbg.location(30,4);
                    pushFollow(FOLLOW_array_declaration_in_statement143);
                    array_declaration();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:31:4: assignment
                    {
                    dbg.location(31,4);
                    pushFollow(FOLLOW_assignment_in_statement148);
                    assignment();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:32:4: if_statement
                    {
                    dbg.location(32,4);
                    pushFollow(FOLLOW_if_statement_in_statement153);
                    if_statement();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    dbg.enterAlt(6);

                    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:33:4: while_statement
                    {
                    dbg.location(33,4);
                    pushFollow(FOLLOW_while_statement_in_statement158);
                    while_statement();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    dbg.enterAlt(7);

                    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:34:4: 'return' expression ';'
                    {
                    dbg.location(34,4);
                    match(input,38,FOLLOW_38_in_statement163); 
                    dbg.location(34,13);
                    pushFollow(FOLLOW_expression_in_statement165);
                    expression();

                    state._fsp--;

                    dbg.location(34,24);
                    match(input,20,FOLLOW_20_in_statement167); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(35, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "statement"



    // $ANTLR start "invariant_statement"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:37:1: invariant_statement : 'invariant' expression ';' ;
    public final void invariant_statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "invariant_statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(37, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:38:2: ( 'invariant' expression ';' )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:38:4: 'invariant' expression ';'
            {
            dbg.location(38,4);
            match(input,36,FOLLOW_36_in_invariant_statement179); 
            dbg.location(38,16);
            pushFollow(FOLLOW_expression_in_invariant_statement181);
            expression();

            state._fsp--;

            dbg.location(38,27);
            match(input,20,FOLLOW_20_in_invariant_statement183); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(39, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "invariant_statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "invariant_statement"



    // $ANTLR start "assert_statement"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:41:1: assert_statement : 'assert' expression ';' ;
    public final void assert_statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "assert_statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(41, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:42:2: ( 'assert' expression ';' )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:42:4: 'assert' expression ';'
            {
            dbg.location(42,4);
            match(input,29,FOLLOW_29_in_assert_statement195); 
            dbg.location(42,13);
            pushFollow(FOLLOW_expression_in_assert_statement197);
            expression();

            state._fsp--;

            dbg.location(42,24);
            match(input,20,FOLLOW_20_in_assert_statement199); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(43, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "assert_statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "assert_statement"



    // $ANTLR start "assume_statement"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:45:1: assume_statement : 'assume' expression ';' ;
    public final void assume_statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "assume_statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(45, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:46:2: ( 'assume' expression ';' )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:46:4: 'assume' expression ';'
            {
            dbg.location(46,4);
            match(input,30,FOLLOW_30_in_assume_statement210); 
            dbg.location(46,13);
            pushFollow(FOLLOW_expression_in_assume_statement212);
            expression();

            state._fsp--;

            dbg.location(46,24);
            match(input,20,FOLLOW_20_in_assume_statement214); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(47, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "assume_statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "assume_statement"



    // $ANTLR start "ensure_statement"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:49:1: ensure_statement : 'ensure' expression ';' ;
    public final void ensure_statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "ensure_statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(49, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:50:2: ( 'ensure' expression ';' )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:50:4: 'ensure' expression ';'
            {
            dbg.location(50,4);
            match(input,33,FOLLOW_33_in_ensure_statement226); 
            dbg.location(50,13);
            pushFollow(FOLLOW_expression_in_ensure_statement228);
            expression();

            state._fsp--;

            dbg.location(50,24);
            match(input,20,FOLLOW_20_in_ensure_statement230); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(51, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "ensure_statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "ensure_statement"



    // $ANTLR start "assignment"
    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:53:1: assignment : IDENT ( '[' expression ']' )* '=' expression ';' ;
    public final void assignment() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "assignment");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(53, 0);

        try {
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:54:2: ( IDENT ( '[' expression ']' )* '=' expression ';' )
            dbg.enterAlt(1);

            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:54:4: IDENT ( '[' expression ']' )* '=' expression ';'
            {
            dbg.location(54,4);
            match(input,IDENT,FOLLOW_IDENT_in_assignment241); 
            dbg.location(54,10);
            // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:54:10: ( '[' expression ']' )*
            try { dbg.enterSubRule(10);

            loop10:
            do {
                int alt10=2;
                try { dbg.enterDecision(10, decisionCanBacktrack[10]);

                int LA10_0 = input.LA(1);

                if ( (LA10_0==27) ) {
                    alt10=1;
                }


                } finally {dbg.exitDecision(10);}

                switch (alt10) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/stud/s_bischo/PSE2011/Design/WhileLanguage.g:54:12: '[' expression ']'
            	    {
            	    dbg.location(54,12);
            	    match(input,27,FOLLOW_27_in_assignment245); 
            	    dbg.location(54,16);
            	    pushFollow(FOLLOW_expression_in_assignment247);
            	    expression();

            	    state._fsp--;

            	    dbg.location(54,27);
            	    match(input,28,FOLLOW_28_in_assignment249); 

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);
            } finally {dbg.exitSubRule(10);}

            dbg.location(54,34);
            match(input,23,FOLLOW_23_in_assignment254); 
            dbg.location(54,38);
            pushFollow(FOLLOW_expression_in_assignment256);
            expression();
